--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "includes/libft_updated"]
 	path = includes/libft_updated
 	url = git@github.com:Tanguyfockedey/libft_updated.git
+[submodule "includes/minilibx-linux"]
+	path = includes/minilibx-linux
+	url = git@github.com:42Paris/minilibx-linux.git
